--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "parseurl": "^1.3.3"
+    "firebase-admin": "^9.5.0",
+    "http": "^0.0.1-security",
+    "parseurl": "^1.3.3",
+    "socket.io": "^3.1.2"
   }
 }
